Full site update
Updates include adding about.html, science.html, teaching.html, and a
few links to the index page

--- a/science.html
+++ b/science.html
@@ -10,10 +10,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="author" content="You probably shouldn’t trust anyone who is certain." />
+<meta name="author" content="Nick Holt" />
 
 
-<title>Nick Holt</title>
+<title>Scientific Publications &amp; Presentations</title>
 
 
 
@@ -30,21 +30,73 @@
 
 
 <section class="page-header">
-<h1 class="title toc-ignore project-name">Nick Holt</h1>
-<h4 class="author project-author">You probably shouldn’t trust anyone who is certain.</h4>
+<h1 class="title toc-ignore project-name">Scientific Publications &amp; Presentations</h1>
+<h4 class="author project-author">Nick Holt</h4>
 </section>
 
 
 
 <section class="main-content">
-<p>This webpage is a work in progress. I plan to add a nice menu with links to my <a href="https://nick-holt.github.io/teaching.html">teaching materials</a>, <a href="https://nick-holt.github.io/science.html">scientific publications</a>, and <a href="https://nick-holt.github.io/social.html">social media</a> accounts. In the meantime, here is a little <a href="https://nick-holt.github.io/about.html">about me</a>. Please stay tuned.</p>
-<div id="on-being-a-scientist" class="section level1">
-<h1>On being a scientist:</h1>
-<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/cRmbwczTC6E?list=PL4AD4DEB4CD566D02" frameborder="0" allowfullscreen>
-</iframe>
-</center>
-<p>This page was created using R Markdown and the <a href="http://github.com/yixuan/prettydoc/">prettydoc</a> package.</p>
+<div id="dissertation" class="section level2">
+<h2>Dissertation</h2>
+<ol style="list-style-type: decimal">
+<li>Holt, N. A., (2016). Mechanisms responsible for the development of causal perception in infancy. Electronic Theses and Dissertations. Paper 2498. doi: <a href="http://dx.doi.org/10.18297/etd/2498">10.18297/etd/2498</a></li>
+</ol>
+</div>
+<div id="publications" class="section level2">
+<h2>Publications</h2>
+<ol style="list-style-type: decimal">
+<li><p>Cashon, C. H., &amp; <strong>Holt, N. A.</strong> (2015). Developmental Origins of the Face Inversion Effect. In Benson, J. B. (Ed.). Advances in Child Development and Behavior. 48, 117-150. San Diego, CA: Elsevier. doi: <a href="http://www.sciencedirect.com/science/article/pii/S0065240714000366">10.1016/bs.acdb.2014.11.008</a></p></li>
+<li><p>DeNicola, C. A., <strong>Holt, N. A.</strong>, Lambert, A. J., &amp; Cashon, C. H. (2013). Attention-orienting and attention-holding effects of faces on 4- to 8-Month-Old Infants. International Journal of Behavioral Development, 37, 143-147. doi: <a href="http://journals.sagepub.com/doi/full/10.1177/0165025412474751">10.1177/0165025412474751</a></p></li>
+</ol>
+<div id="works-in-progress" class="section level3">
+<h3>Works in Progress</h3>
+<ol style="list-style-type: decimal">
+<li><p>Ha, O., Cashon, C. H., <strong>Holt, N. A.</strong>, &amp; Mervis, C. B. (in prep). Rapid Word-Object Association is Related to Expressive Vocabulary Size in Infants and Toddlers with and without Williams Syndrome.</p></li>
+<li><p>Cashon, C. H., <strong>Holt, N. A.</strong>, Dixon, K. C., &amp; Woodruff-Borden, J. (in prep). Maternal Negative Affect is related to 5-month-old Infants’ Discrimination of Facial Expressions in a Non-clinical Sample.</p></li>
+</ol>
+</div>
+</div>
+<div id="presentations" class="section level2">
+<h2>Presentations</h2>
+<div id="peer-reviewed-conference-presentations" class="section level3">
+<h3>Peer-reviewed Conference Presentations</h3>
+<ol style="list-style-type: decimal">
+<li><p><strong>Holt, N. A.</strong>, Pal, P., Olesen, N. M., Dixon, K. C., &amp; Cashon, C. H. (accepted). Parent Interaction Disrupts 4-month-old Infants’ Learning about Causality during Sticky Mittens Training. Talk submitted to the biennial meeting of the Society for Research in Child Development, Austin, TX.</p></li>
+<li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2016, May). Are differences in the effects of sticky mittens experience on 4-month-olds’ perception of causality related to motor development?. Poster presented at the biennial meeting of the International Congress on Infant Studies, New Orleans, LA.</p></li>
+<li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2015, October). Causal perception in 4-month-olds: contributions of self-produced action and parental interaction. Poster presented at the biennial meeting of the Cognitive Development Society, Columbus, OH.</p></li>
+<li><p>Dixon, K. C., <strong>Holt, N. A.</strong>, Woodruff-Borden, J., &amp; Cashon, C. H. (2015, October). Same visual input, different cognitive outcome: Differences in 5-month-olds’ emotion discrimination, but not visual scanning behavior. Poster presented at the biennial meeting of the Cognitive Development Society, Columbus, OH.</p></li>
+<li><p>Cashon, C. H., <strong>Holt, N. A.</strong>, &amp; Woodruff-Borden, J. (2015, March). Emotional environment is related to infants’ scanning and discrimination of neutral and happy faces. Talk presented at the biennial meeting of the Society for Research in Child Development, Philadelphia, PA.</p></li>
+<li><p><strong>Holt, N. A.</strong>, Cashon, C. H., Woodruff-Borden, J., &amp; Smith, S. G. (2014, July). Parental symptoms of depression and anxiety are related to 5-month-olds’ face scanning and discrimination of facial expressions. Poster presented at the biennial meeting of the International Conference on Infant Studies, Berlin, DE.</p></li>
+<li><p>Ha, O., Cashon, C. H., <strong>Holt, N. A.</strong>, Helton, L. E., &amp; Mervis, C. B. (2014, July). Rapid word-object association is related to expressive vocabulary size in infants and toddlers with and without Williams syndrome. Poster presented at the biennial meeting of the International Conference on Infant Studies, Berlin, DE.</p></li>
+<li><p><strong>Holt, N. A.</strong>, Patane, R. R., &amp; White, W. (2010, November). Two hours of amphetamine exposure is sufficient to produce longer-term withdrawal-related hypophagia. Paper presented at the 96th Annual Meeting of the Kentucky Academy of Science, Bowling Green, KY.</p></li>
+<li><p>Gibbs, D., Patane, R. R., Addison, A. A., <strong>Holt, N. A.</strong>, Dillow, J., &amp; White, W. (2010, November). A novel procedure for investigating amphetamine-induced withdrawal-related hypophagia. Paper presented at the 96th Annual Meeting of the Kentucky Academy of Science, Bowling Green, KY.</p></li>
+<li><p>Patane, R. R., Addison, A. A., <strong>Holt, N. A.</strong>, Dillow, J., Gibbs, D., &amp; White, W. (2010, November). The role of selective dopamine receptor agonists in amphetamine-induced withdrawal-related hypophagia. Paper presented at the 96th Annual Meeting of the Kentucky Academy of Science, Bowling Green, KY.</p></li>
+<li><p>Osborne, S., Book, D., <strong>Holt, N. A.</strong>, May. L, &amp; White, I. M. (2009, November). Repeated exposure to psychostimulants on appetitive behavior. Paper presented at the 95th Annual Meeting of the Kentucky Academy of Science, Highland Heights, KY.</p></li>
+</ol>
+</div>
+<div id="invited-talks" class="section level3">
+<h3>Invited Talks</h3>
+<ol style="list-style-type: decimal">
+<li><p><strong>Holt, N.A.</strong> (2016, November). Using R and VBA to Automate Data Workflows. Talk presented to the Institute for Advanced Analytics, Bellarmine University, Louisville, KY.</p></li>
+<li><p><strong>Holt, N. A.</strong> (2015, November). Relations between infants’ emerging perceptual, cognitive, and motor abilities. Talk presented at the Morehead State University Department of Psychology Colloquium Series, Morehead, KY.</p></li>
+<li><p><strong>Holt, N. A.</strong>, DeNicola, C. A., Ha, O., Helton, L. E., &amp; Cashon, C. H. (2013, April). Infants’ processing and scanning of faces. Talk presented at the biennial meeting of the Society for Research in Child Development - Face Processing Pre-Conference, Seattle, WA.</p></li>
+</ol>
+</div>
+<div id="other-presentations" class="section level3">
+<h3>Other Presentations</h3>
+<ol style="list-style-type: decimal">
+<li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2016, April). Does motor development predict what infants learn about objects from manual exploration experience?. Poster presented at the University of Louisville Graduate Regional Research Conference, Louisville, KY.</p></li>
+<li><p><strong>Holt, N. A.</strong> (2016, April). Optimizing experience to promote causal learning in infancy. Talk presented at the University of Louisville Graduate Regional Research Conference – Three Minute Thesis Competition (3MT), Louisville, KY. <strong>This talk placed runner-up in the competition</strong></p></li>
+<li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2015, October). Causal perception in 4-month-olds: Contributions of self-produced action and parental interaction. Poster presented at Research!Louisville, Louisville, KY.</p></li>
+<li><p>Dixon, K. C., <strong>Holt, N. A.</strong>, Woodruff-Borden, J., &amp; Cashon, C. H. (2015, October). Same visual input, different cognitive outcome: Differences in 5-month-olds’ emotion discrimination, but not visual scanning behavior. Poster presented at Research!Louisville, Louisville, KY.</p></li>
+<li><p><strong>Holt, N. A.</strong> (2015, March). The development of the face inversion effect during infancy. Talk presented at the University of Louisville Experimental Psychology Brown-bag Seminar Series, Louisville, KY.</p></li>
+<li><p><strong>Holt, N. A.</strong> (2014, January). Rethinking the origin of causal perception. Talk presented at the University of Louisville Experimental Psychology Seminar Series, Louisville, KY.</p></li>
+<li><p>Smith, S. G., <strong>Holt</strong>, N. A., Woodruff-Borden, J., &amp; Cashon, C. H. (2013, July). 5-month-old infants’ face scanning patterns differentiate emotion discrimination ability. Poster presented at the University of Louisville Poster Session of Summer Undergraduate Research, Louisville, KY.</p></li>
+<li><p>Arrowood, A., <strong>Holt, N. A.</strong>, Williams, S., Woodruff-Borden, J., &amp; Cashon, C. H. (2012, May). Five-month-old infants’ discrimination of emotion in faces. Poster presented at the University of Louisville Undergraduate Research Symposium, Louisville, KY.</p></li>
+<li><p>Addison, A. A., Maione, G., <strong>Holt, N. A.</strong>, &amp; White, W. (2011, April). Impact of amphetamine and dopamine agonists on acute- and withdrawal-phase feeding in rats. Paper presented at the Morehead State University Celebration of Student Scholarship, Morehead, KY.</p></li>
+</ol>
+</div>
 </div>
 </section>
 
