--- a/teaching.html
+++ b/teaching.html
@@ -10,10 +10,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="author" content="You probably shouldn’t trust anyone who is certain." />
+<meta name="author" content="Nick Holt" />
 
 
-<title>Nick Holt</title>
+<title>Teaching Materials</title>
 
 
 
@@ -30,22 +30,14 @@
 
 
 <section class="page-header">
-<h1 class="title toc-ignore project-name">Nick Holt</h1>
-<h4 class="author project-author">You probably shouldn’t trust anyone who is certain.</h4>
+<h1 class="title toc-ignore project-name">Teaching Materials</h1>
+<h4 class="author project-author">Nick Holt</h4>
 </section>
 
 
 
 <section class="main-content">
-<p>This webpage is a work in progress. I plan to add a nice menu with links to my <a href="https://nick-holt.github.io/teaching.html">teaching materials</a>, <a href="https://nick-holt.github.io/science.html">scientific publications</a>, and <a href="https://nick-holt.github.io/social.html">social media</a> accounts. In the meantime, here is a little <a href="https://nick-holt.github.io/about.html">about me</a>. Please stay tuned.</p>
-<div id="on-being-a-scientist" class="section level1">
-<h1>On being a scientist:</h1>
-<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/cRmbwczTC6E?list=PL4AD4DEB4CD566D02" frameborder="0" allowfullscreen>
-</iframe>
-</center>
-<p>This page was created using R Markdown and the <a href="http://github.com/yixuan/prettydoc/">prettydoc</a> package.</p>
-</div>
+<p>Content will be added soon.</p>
 </section>
 
 
