Page Update (August 2017)
Updated info on several pages. Will add a blog soon.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="author" content="You probably shouldn’t trust anyone who is certain." />
+<meta name="author" content="Our lives may be no more than dew drops on a summer morning. But surely it is better that we sparkle while we are here." />
 
 
-<title>Nick Holt</title>
+<title>Nick Holt, PhD</title>
 
 
 
@@ -30,14 +30,24 @@
 
 
 <section class="page-header">
-<h1 class="title toc-ignore project-name">Nick Holt</h1>
-<h4 class="author project-author">You probably shouldn’t trust anyone who is certain.</h4>
+<h1 class="title toc-ignore project-name">Nick Holt, PhD</h1>
+<h4 class="author project-author">‘Our lives may be no more than dew drops on a summer morning. But surely it is better that we sparkle while we are here.’</h4>
 </section>
 
 
 
 <section class="main-content">
-<p>This webpage is a work in progress. I plan to add a nice menu with links to my <a href="https://nick-holt.github.io/teaching.html">teaching materials</a>, <a href="https://nick-holt.github.io/science.html">scientific publications</a>, and <a href="https://nick-holt.github.io/social.html">social media</a> accounts. In the meantime, here is a little <a href="https://nick-holt.github.io/about.html">about me</a>. Please stay tuned.</p>
+<p>This webpage is a work in progress.</p>
+<div id="menu" class="section level2">
+<h2>Menu</h2>
+<ul>
+<li><a href="https://nick-holt.github.io/about.html">about me</a></li>
+<li><a href="https://nick-holt.github.io/blog.html">data science blog</a></li>
+<li><a href="https://nick-holt.github.io/teaching.html">teaching materials</a></li>
+<li><a href="https://nick-holt.github.io/science.html">scientific publications</a></li>
+<li><a href="https://nick-holt.github.io/social.html">social media</a></li>
+</ul>
+</div>
 <div id="on-being-a-scientist" class="section level1">
 <h1>On being a scientist:</h1>
 <center>
@@ -55,7 +65,7 @@
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
