--- a/teaching.html
+++ b/teaching.html
@@ -37,7 +37,26 @@
 
 
 <section class="main-content">
-<p>Content will be added soon.</p>
+<div id="courses-taught" class="section level2">
+<h2>Courses Taught</h2>
+<p>ANLY 531 – Analytics Tools and Methods I (6 credits, Bellarmine University, Spring 2017)</p>
+<ul>
+<li>Topics: Introduction to Data Analysis, R Programming, Probability</li>
+</ul>
+<p>ANLY 532 – Analytics Tools and Methods II (3 credits, Bellarmine University, Summer 2017)</p>
+<ul>
+<li>Topic: Computational Inferential Statistics Using R</li>
+</ul>
+<p>ANLY 522 – Professional Skills for Analytics II (2 credits, Bellarmine University, Summer 2017)</p>
+<p>ANLY 533 – Analytics Tools and Methods III (5 credits, Bellarmine University, Fall 2017)</p>
+<ul>
+<li>Topic: Data Mining</li>
+</ul>
+<p>ANLY 542 – Analytics Applications II (3 credits, Bellarmine University, Fall 2017)</p>
+<ul>
+<li>Topic: Regression</li>
+</ul>
+</div>
 </section>
 
 
@@ -47,7 +66,7 @@
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
