--- a/science.html
+++ b/science.html
@@ -52,9 +52,9 @@
 <div id="works-in-progress" class="section level3">
 <h3>Works in Progress</h3>
 <ol style="list-style-type: decimal">
-<li><pre><code>Ware, L. J., Collins, D., Raffle, H., **Holt, N. A.**, Wandersman, A. &amp; Haines, M. Y. (submitted). A Developmental Community Capacity and Readiness Assessment Process: Rural and Appalachian County Readiness to Engage in the Strategic Prevention Framework (SPF). Journal of Community Practice. </code></pre></li>
-<li><pre><code>**Holt, N. A.**, Olesen, N. M., Dixon, K. C., Dale, L. E., &amp; Cashon, C. H. (in prep). Do infants experience face pareidolia? An investigation of infants’ preference for upright faces and face-like images.</code></pre></li>
-<li><pre><code>**Holt, N. A.** &amp; Cashon, C. H. (in prep). Parent Interaction Disrupts 4-month-old Infants’ Learning about Causality during Sticky Mittens Training.</code></pre></li>
+<li><p>Ware, L. J., Collins, D., Raffle, H., <strong>Holt, N. A.</strong>, Wandersman, A. &amp; Haines, M. Y. (submitted). A Developmental Community Capacity and Readiness Assessment Process: Rural and Appalachian County Readiness to Engage in the Strategic Prevention Framework (SPF). Journal of Community Practice.</p></li>
+<li><p><strong>Holt, N. A.</strong>, Olesen, N. M., Dixon, K. C., Dale, L. E., &amp; Cashon, C. H. (in prep). Do infants experience face pareidolia? An investigation of infants’ preference for upright faces and face-like images.</p></li>
+<li><p><strong>Holt, N. A.</strong> &amp; Cashon, C. H. (in prep). Parent Interaction Disrupts 4-month-old Infants’ Learning about Causality during Sticky Mittens Training.</p></li>
 <li><p>Cashon, C. H., <strong>Holt, N. A.</strong>, Dixon, K. C., &amp; Woodruff-Borden, J. (in prep). Maternal Negative Affect is related to 5-month-old Infants’ Discrimination of Facial Expressions in a Non-clinical Sample.</p></li>
 <li><p>Ha, O., Cashon, C. H., <strong>Holt, N. A.</strong>, &amp; Mervis, C. B. (in prep). Rapid Word-Object Association is Related to Expressive Vocabulary Size in Infants and Toddlers with and without Williams Syndrome.</p></li>
 </ol>
