Fixed another bug
Missed a few lines of code that were bad. Fixed.

--- a/science.html
+++ b/science.html
@@ -65,7 +65,7 @@
 <div id="peer-reviewed-conference-presentations" class="section level3">
 <h3>Peer-reviewed Conference Presentations</h3>
 <ol style="list-style-type: decimal">
-<li><pre><code>Olesen, N. M., Dixon, K. C., **Holt, N. A.**, Dale, L. E., &amp; Cashon, C. H. (accepted). Do Babies See Faces in Face, Face-like, and Ambiguous Stimuli? Pareidolia in Infancy. Poster submitted to the biennial meeting of the Cognitive Development Society, Portland, OR.</code></pre></li>
+<li><p>Olesen, N. M., Dixon, K. C., <strong>Holt, N. A.</strong>, Dale, L. E., &amp; Cashon, C. H. (accepted). Do Babies See Faces in Face, Face-like, and Ambiguous Stimuli? Pareidolia in Infancy. Poster submitted to the biennial meeting of the Cognitive Development Society, Portland, OR.</p></li>
 <li><p><strong>Holt, N. A.</strong>, Pal, P., Olesen, N. M., Dixon, K. C., &amp; Cashon, C. H. (2017, April). Parent Interaction Disrupts 4-month-old Infants’ Learning about Causality during Sticky Mittens Training. Talk submitted to the biennial meeting of the Society for Research in Child Development, Austin, TX.</p></li>
 <li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2016, May). Are differences in the effects of sticky mittens experience on 4-month-olds’ perception of causality related to motor development?. Poster presented at the biennial meeting of the International Congress on Infant Studies, New Orleans, LA.</p></li>
 <li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2015, October). Causal perception in 4-month-olds: contributions of self-produced action and parental interaction. Poster presented at the biennial meeting of the Cognitive Development Society, Columbus, OH.</p></li>
@@ -82,7 +82,7 @@
 <div id="invited-talks" class="section level3">
 <h3>Invited Talks</h3>
 <ol style="list-style-type: decimal">
-<li><pre><code>**Holt, N. A.** (2017, August). Function iterations using R. Talk presented to the Louisville R Users Group, Louisville, KY.</code></pre></li>
+<li><p><strong>Holt, N. A.</strong> (2017, August). Function iterations using R. Talk presented to the Louisville R Users Group, Louisville, KY.</p></li>
 <li><p><strong>Holt, N.A.</strong> (2016, November). Using R and VBA to Automate Data Workflows. Talk presented to the Institute for Advanced Analytics, Bellarmine University, Louisville, KY.</p></li>
 <li><p><strong>Holt, N. A.</strong> (2015, November). Relations between infants’ emerging perceptual, cognitive, and motor abilities. Talk presented at the Morehead State University Department of Psychology Colloquium Series, Morehead, KY.</p></li>
 <li><p><strong>Holt, N. A.</strong>, DeNicola, C. A., Ha, O., Helton, L. E., &amp; Cashon, C. H. (2013, April). Infants’ processing and scanning of faces. Talk presented at the biennial meeting of the Society for Research in Child Development - Face Processing Pre-Conference, Seattle, WA.</p></li>
@@ -91,7 +91,7 @@
 <div id="other-presentations" class="section level3">
 <h3>Other Presentations</h3>
 <ol style="list-style-type: decimal">
-<li><pre><code>Crenshaw, R., Dixon, K. C., Olesen, N. M., **Holt, N. A.**, &amp; Cashon, C. H. (2017, August). The Effects of Parent Interactions in Infant Learning. Poster presented at the University of Louisville Poster Session of Summer Undergraduate Research, Louisville, KY.</code></pre></li>
+<li><p>Crenshaw, R., Dixon, K. C., Olesen, N. M., <strong>Holt, N. A.</strong>, &amp; Cashon, C. H. (2017, August). The Effects of Parent Interactions in Infant Learning. Poster presented at the University of Louisville Poster Session of Summer Undergraduate Research, Louisville, KY.</p></li>
 <li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2016, April). Does motor development predict what infants learn about objects from manual exploration experience?. Poster presented at the University of Louisville Graduate Regional Research Conference, Louisville, KY.</p></li>
 <li><p><strong>Holt, N. A.</strong> (2016, April). Optimizing experience to promote causal learning in infancy. Talk presented at the University of Louisville Graduate Regional Research Conference – Three Minute Thesis Competition (3MT), Louisville, KY. <strong>This talk placed runner-up in the competition</strong></p></li>
 <li><p><strong>Holt, N. A.</strong>, Cashon, C. H. (2015, October). Causal perception in 4-month-olds: Contributions of self-produced action and parental interaction. Poster presented at Research!Louisville, Louisville, KY.</p></li>
